# testdatapy

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.multi  LICENSE  Makefile  README.md  deploy.sh  pyproject.toml  pytest.ini  requirements.txt
docker/: docker-compose.yml
docker-testdata-correlated/: README.md  docker-compose.yml  run-local.py
docker-testdata-correlated/configs/: ecommerce-correlated.yaml
docker-testdata-correlated/scripts/: produce-correlated.py
k8s/: configmap.yaml  correlated-configmap.yaml  correlated-data-job.yaml  correlated-scripts-configmap.yaml  job.yaml
k8s/configs/: correlated-data-sasl-config.yaml
k8s/jobs/: correlated-data-sasl-job.yaml
src/testdatapy/: __init__.py  cli.py  cli_batch.py  cli_cache.py  cli_correlated.py  cli_lifecycle.py  cli_proto.py  cli_topics.py  exceptions.py  health.py  logging_config.py  schema_evolution.py  shutdown.py  topics.py
tests/: conftest.py  implementation_summary.py  local_protobuf_integration.py
tests/integration/: README.md  conftest.py  test_correlated_protobuf.py  test_correlated_workflow.py  test_cross_platform_compatibility.py  test_e2e_suite_runner.py  test_enhanced_produce_command.py  test_kafka_integration.py  test_kafka_integration_enhanced.py  test_mtls_integration.py  test_proto_to_kafka_e2e.py  test_protobuf_real.py  test_protobuf_reliability.py  test_schema_registry_integration.py  test_sequential_generation_e2e.py  test_topics_cleanup_integration.py  test_topics_create_integration.py  test_topics_integration.py  test_vehicle_integration.py  (+2 more)
(+137 files in other folders)
